--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -1,9 +1,9 @@
 .navbar-container {
-  position: fixed;
-  top: 10px;
+  /* position: fixed;
+  top: 10px; */
 
   display: flex;
-  gap: 10px;
+  gap: 3em;
 }
 
 .navbar-link {
